# climpdfgetter

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
scripts/: complete_semantic_scholar.py  deduplicate_titanv.py  extract_keys.py  get_from_titanv.py  problematic_files.py  update_checkpoint_from_initial.py  update_checkpoint_from_split.py
scripts/throwaway/: clean_checkpoint.py  deduplicate_titanv.py  explore_peso.py  find_abstract.py  inspect_db.py  merge_chunks.py  old_sectionize_code.py  sort_checkpoint.py  time_get_paper.py  transform.py  update_checkpoint.py
src/: process.py
src/climpdfgetter/: collect.py  convert.py  crawl.py  develop_ref_heuristic.py  epa_crawl.py  extract_references.py  mcp_server.py  metadata.py  ref_extraction_utils.py  schema.py  scrape_images_pdf.py  searches.py  sectionize.py  sources.py  titanv.py  utils.py
src/climpdfgetter/scripts/: complete_semantic_scholar.py  final_update_checkpoint.py  get_from_titanv.py  scrape_images_pdf.py
src/climpdfgetter/scripts/throwaway/: clean_checkpoint.py  combine_checkpoints.py  deduplicate_titanv.py  final_update_checkpoint.py  inspect_db.py  problematic_files.py  update_checkpoint.py
