[project]
authors = [{ name = "jlnav", email = "jnavarro@anl.gov" }]
description = "Download and convert reports from OSTI and EPA"
name = "climpdfgetter"
requires-python = ">=3.10"
version = "0.1.0"
dependencies = [
    "openparse",
    "beautifulsoup4>=4.13.4,<5",
    "requests>=2.32.4,<3",
    "pydantic>=2.11.7,<3",
    "chardet>=5.2.0,<6",
    "click>=8.2.1,<9",
    "crawl4ai>=0.7.1,<0.8",
    "layoutparser>=0.3.4,<0.4",
    "torchvision>=0.22.1,<0.23",
    "grobid-client-python>=0.0.17,<0.0.18",
    "joblib",
]

[project.scripts]
climpdf = "climpdfgetter.crawl:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
climpdfgetter = { path = ".", editable = true }

[tool.pixi.environments]
default = []
dev = ["dev", "climpdf"]
climpdf = ["climpdf"]

[tool.pixi.dependencies]
python = ">=3.12.0,<3.13"

[tool.pixi.feature.dev.dependencies]
ipdb = ">=0.13.13,<0.14"
pre-commit = ">=4.0.1,<5"
pip = ">=24.3.1,<25"
black = ">=25.1.0,<26"
pytest = ">=8.3.5,<9"

[tool.pixi.feature.climpdf.dependencies]
libgfortran = ">=5.0.0,<15"
langdetect = ">=1.0.9,<2"
ratelimit = ">=2.2.1,<3"
asyncpg = ">=0.31.0,<0.32"
fsspec = ">=2025.12.0,<2026"
boxsdk = ">=10.2.0,<11"

[dependency-groups]
dev = ["wat>=0.5.1,<0.6"]
climpdf = [
    "marker-pdf>=1.7.0,<2",
    "markdown-analysis>=0.1.5,<0.2",
    "semanticscholar>=0.11.0,<0.12", "box-sdk-gen[jwt]>=1.17.0,<2",
]
