[project]
dependencies = [
    "openparse>=0.7.0,<0.8",
    "layoutparser>=0.3.4,<0.4",
    "grobid-client-python>=0.1.4,<0.2",
    "semanticscholar>=0.11.0,<0.12",
    "wat>=0.7.0,<0.8",
]

authors = [{ name = "jlnav", email = "jnavarro@anl.gov" }]
description = "Download and convert reports from OSTI and EPA"
name = "climpdfgetter"
requires-python = ">=3.10"
version = "0.1.0"

[project.scripts]
climpdf = "climpdfgetter.crawl:main"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64", "linux-64"]

[tool.pixi.pypi-dependencies]
climpdfgetter = { path = ".", editable = true }

[tool.pixi.environments]
default = []
dev = ["dev", "climpdf"]
climpdf = ["climpdf"]
experiment = ["experiment"]

[tool.pixi.dependencies]
python = ">=3.12.0,<3.13"
psycopg2 = ">=2.9.11,<3"
sshuttle = ">=1.1.1,<2"

[tool.pixi.feature.dev.dependencies]
ipdb = ">=0.13.13,<0.14"
pre-commit = ">=4.5.1,<5"
pip = ">=26.0.1,<27"
black = ">=26.3.1,<27"
pytest = ">=9.0.2,<10"

[tool.pixi.feature.climpdf.dependencies]
libgfortran = ">=15.2.0,<16"
langdetect = ">=1.0.9,<2"
ratelimit = ">=2.2.1,<3"
asyncpg = ">=0.31.0,<0.32"
fsspec = ">=2023.1.0,<=2024.6.1"
transformers = ">=4.57.6,<5"
datasets = ">=3.0.0,<4.0.0"
beautifulsoup4 = ">=4.14.3,<5"
requests = ">=2.32.5,<3"
pydantic = ">=2.12.5,<3"
click = ">=8.3.1,<9"
joblib = ">=1.5.3,<2"
openai = ">=2.26.0,<3"
sentence-transformers = ">=5.3.0,<6"
crawl4ai = ">=0.3.73,<0.8"
pytorch = ">=2.10.0,<3"

[tool.pixi.feature.experiment.dependencies]

[dependency-groups]
dev = ["wat>=0.7.0,<0.8"]
experiment = ["wat>=0.7.0,<0.8"]
